# architect

./: Cargo.toml  Cross.toml  install.sh  uninstall.sh
.github/workflows/: release.yml
crates/agent/: Cargo.toml
crates/agent/src/: battery.rs  discovery.rs  gpu.rs  grpc_connection.rs  heartbeat.rs  main.rs  metrics.rs  task.rs
crates/bootstrap/: Cargo.toml
crates/bootstrap/src/: adb.rs  agent_server.rs  lib.rs  orchestrator.rs  ssh.rs  winrm.rs
crates/client/: Cargo.toml
crates/client/src/: app.rs  beacon.rs  bootstrap_manager.rs  command.rs  cross_compile.rs  event.rs  health.rs  leader.rs  local_executor.rs  main.rs  network_discovery.rs  task_manager.rs  tui.rs
crates/client/src/grpc/: server.rs
crates/client/src/views/: info.rs  mod.rs  workspace.rs
crates/client/src/widgets/: activity_log.rs  command_bar.rs  graph.rs  metrics_panel.rs  mod.rs  task_list.rs
crates/compute/: Cargo.toml
crates/compute/src/: backend.rs  cpu.rs  gpu.rs  lib.rs  wgpu_backend.rs
crates/core/: Cargo.toml  build.rs
crates/core/proto/: architect.proto
crates/core/src/: beacon.rs  config.rs  db.rs  error.rs  lib.rs  payload.rs  plugin.rs  proto_conv.rs  protocol.rs  tls.rs  transport.rs  types.rs
crates/discovery/: Cargo.toml
crates/discovery/src/: discovery.rs  fingerprint.rs  lib.rs  mdns.rs  scanner.rs
crates/ml/: Cargo.toml
crates/ml/src/: lib.rs  model_loader.rs
crates/ml/src/inference/: distributed.rs  mod.rs  model_shard.rs
crates/ml/src/training/: data_parallel.rs  distributed.rs  mod.rs  pipeline_parallel.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: adaptive.rs  data_locality.rs  lib.rs  ring_allreduce.rs  round_robin.rs  tests_common.rs  weighted.rs
crates/transport/: Cargo.toml
crates/transport/src/: compress.rs  lib.rs  quic.rs  scheduler.rs  websocket.rs  wifi.rs
