[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/transport",
    "crates/discovery",
    "crates/scheduler",
    "crates/compute",
    "crates/ml",
    "crates/bootstrap",
    "crates/agent",
    "crates/client",
]

[workspace.package]
version = "0.2.3"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
async-trait = "0.1"
half = "2"
toml = "0.8"
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"
tokio-stream = "0.1"
data-encoding = "2"
serde_json = "1"
rcgen = "0.13"
rusqlite = { version = "0.32", features = ["bundled"] }
tracing-appender = "0.2"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
safetensors = "0.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
