[package]
name = "architect-bootstrap"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["ssh"]
ssh = ["dep:openssh"]
adb = []
winrm = []

[dependencies]
architect-core = { path = "../core" }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
data-encoding = { workspace = true }
openssh = { version = "0.11", optional = true }
