[package]
name = "architect-client"
version.workspace = true
edition.workspace = true

[[bin]]
name = "architect"
path = "src/main.rs"

[dependencies]
architect-core = { path = "../core" }
architect-discovery = { path = "../discovery" }
architect-bootstrap = { path = "../bootstrap", default-features = false }
architect-scheduler = { path = "../scheduler" }
tokio.workspace = true
serde.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
futures.workspace = true
tonic.workspace = true
prost.workspace = true
tokio-stream.workspace = true
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
sysinfo = "0.33"
serde_json.workspace = true
bincode.workspace = true
rusqlite.workspace = true
tracing-appender.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true

[target.'cfg(unix)'.dependencies]
architect-bootstrap = { path = "../bootstrap", features = ["ssh"] }
