[package]
name = "architect-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
bincode.workspace = true
uuid.workspace = true
thiserror.workspace = true
async-trait.workspace = true
anyhow.workspace = true
toml.workspace = true
tracing.workspace = true
tonic.workspace = true
prost.workspace = true
rcgen.workspace = true
data-encoding.workspace = true
rusqlite.workspace = true
serde_json.workspace = true

[build-dependencies]
tonic-build = "0.12"
