[package]
name = "architect-discovery"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["mdns", "network-scan"]
mdns = ["dep:mdns-sd"]
network-scan = []

[dependencies]
architect-core = { path = "../core" }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
mdns-sd = { version = "0.11", optional = true }
async-stream = "0.3"
